# python-simple-menu

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
python_simple_menu/: items.py  menu.py  menu_items.py
python_simple_menu/examples/: 01_basic_usage.py  02_custom_prompts.py
simple_menu/: items.py  menu.py
