[tool.poetry]
name = "python-simple-menu"
version = "0.0.0"
description = "Yet another simple console menu"
authors = ["Chris Vann <chrisvann01@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "python_simple_menu" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
